--- a/css/style.css
+++ b/css/style.css
@@ -790,7 +790,7 @@ a:hover{
         margin-bottom: 7%;
     }
     .swiper {
-        width: 170px;
+        width: 50%;
         height: 400px;
         margin-bottom: 10%;
     }
