--- a/css/style.css
+++ b/css/style.css
@@ -463,16 +463,16 @@ a:hover{
     height: 100%;
 }
 .pessoa1{
-    background-image: linear-gradient(rgba(0,0,0,.4),rgba(0,0,0,.4)),url(../img/pessoa-1.jpg);
+    background-image: linear-gradient(rgba(0,0,0,.4),rgba(0,0,0,.4)),url(../img/joao.jpg);
 }
 .pessoa2{
-    background-image: linear-gradient(rgba(0,0,0,.4),rgba(0,0,0,.4)),url(../img/pessoa-2.jpg);
+    background-image: linear-gradient(rgba(0,0,0,.4),rgba(0,0,0,.4)),url(../img/jorge.JPG);
 }
 .pessoa3{
     background-image: linear-gradient(rgba(0,0,0,.4),rgba(0,0,0,.4)),url(../img/pessoa-3.jpg);
 }
 .pessoa4{
-    background-image: linear-gradient(rgba(0,0,0,.4),rgba(0,0,0,.4)),url(../img/pessoa-4.jpg);
+    background-image: linear-gradient(rgba(0,0,0,.4),rgba(0,0,0,.4)),url(../img/eli.jpeg);
 }
 .card-content{
     position: absolute;
