--- a/css/style.css
+++ b/css/style.css
@@ -469,7 +469,7 @@ a:hover{
     background-image: linear-gradient(rgba(0,0,0,.4),rgba(0,0,0,.4)),url(../img/jorge.JPG);
 }
 .pessoa3{
-    background-image: linear-gradient(rgba(0,0,0,.4),rgba(0,0,0,.4)),url(../img/pessoa-3.jpg);
+    background-image: linear-gradient(rgba(0,0,0,.4),rgba(0,0,0,.4)),url(../img/guilherme.jpeg);
 }
 .pessoa4{
     background-image: linear-gradient(rgba(0,0,0,.4),rgba(0,0,0,.4)),url(../img/eli.jpeg);
